# msd-backtest

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  pyrefly.toml  ruff.toml
.agents/rules/: code-style.md
.agents/skills/msd-strategy/: SKILL.md
.agents/skills/optimize-strategy/: SKILL.md
.agents/skills/write-selector/: SKILL.md
.agents/skills/write-strategy/: SKILL.md
.github/workflows/: build.yaml
etc/: fee.json  stocks.json
mbt/: __init__.py  account.py  data_provider.py  runner.py  strategy.py
mbt/run/: __init__.py  backend.py  cli.py  msd.py  report.py  review.py  runner.py  server.py
mbt/select/: __init__.py  cli.py  msd.py  selector.py  stocks.py
strategy/: abc.py  double_avg.py  growth_large_cap_ma15_selector.py
tests/: test_account.py  test_alpha.py  test_load_strategy.py  test_report.py  test_runner.py  test_selector.py  test_strategy.py  test_strategy_loading_complex.py
