[project]
name = "msd-backtest"
version = "0.1.0"
description = "MSD backtest framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[tool.pytest.ini_options]
pythonpath = [ "." ]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "DEBUG"
log_cli = true